feat: converge title acquisition
Fixes #174
